overflow no longer hidden

--- a/projects/obstruction/styles.css
+++ b/projects/obstruction/styles.css
@@ -7,7 +7,7 @@ body {
     background-color: black;
     width: 100%;
     margin: 200px 100px;
-    overflow: hidden;
+
 }
 
 .car {
